# hr_matcher

./: .env  .gitignore  data.dvc  main.py  models.py  pyproject.toml  readme.md  test.ipynb  train.py  vilovnok.md
.dvc/: config
data/: .gitignore  without_dup.csv.dvc
src/: config.py  model.py  module.py  utils.py
src/actors/: AggregatorActor.py  prompt.py  worker.py
src/serve/: serve.py
