[tool.poetry]
name = "hr-matcher"
packages = [{include = "src"}]
version = "0.1.0"
description = ""
authors = ["vilovnok <vilovnok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["train"], version = "^2.50.1"}
tqdm = "^4.67.1"
beautifulsoup4 = "^4.14.2"
fake-useragent = "^2.2.0"
openai = "^2.2.0"
python-dotenv = "^1.1.1"
lxml = "^5.3.0"
bs4 = "^0.0.2"
mlflow = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
